package dk.sdu.mmmi.cbse.common.data;

import com.badlogic.gdx.graphics.Color;
import dk.sdu.mmmi.cbse.common.data.entityparts.EntityPart;

//import com.badlogic.gdx.graphics.Color;
import dk.sdu.mmmi.cbse.common.data.entityparts.EntityType;

import java.io.Serializable;
import java.util.Map;
import java.util.UUID;
import java.util.concurrent.ConcurrentHashMap;
public class Entity implements Serializable {
    private final UUID ID = UUID.randomUUID();
    private EntityType type;

    private float[] shapeX = new float[4];
    private float[] shapeY = new float[4];
    private float radius;
    private int v,v1,v2,v3;
    private Color color = Color.WHITE;
//    private



    private Map<Class, EntityPart> parts;
    
    public Entity() {
        parts = new ConcurrentHashMap<>();
    }
    
    public void add(EntityPart part) {
        parts.put(part.getClass(), part);
    }
    
    public void remove(Class partClass) {
        parts.remove(partClass);
    }
    
    public <E extends EntityPart> E getPart(Class partClass) {
        return (E) parts.get(partClass);
    }
    
    public void setRadius(float r){
        this.radius = r;
    }
    
    public float getRadius(){
        return radius;
    }

    public String getID() {
        return ID.toString();
    }


    public float[] getShapeX() {
        return shapeX;
    }

    public void setShapeX(float[] shapeX) {
        this.shapeX = shapeX;
    }

    public float[] getShapeY() {
        return shapeY;
    }

    public void setShapeY(float[] shapeY) {
        this.shapeY = shapeY;
    }


    public Color getColor() {
        return color;
    }

    public void setColor(Color color) {
        this.color = color;
    }

    public EntityType getType() {
        return type;
    }

    public void setType(EntityType type) {
        this.type = type;
    }
}
